@@ -53,11 +53,29 @@ class AnnonceRepositoryTest {
         }
     }
 
+    private Annonce saveAnnonce(String title, String description, String adress, String mail) {
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            em.getTransaction().begin();
+            Annonce annonce = new Annonce(title, description, adress, mail);
+            repository.save(em, annonce);
+            em.getTransaction().commit();
+            return annonce;
+        }
+    }
+
+    private User saveUser(String username, String email, String password) {
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            em.getTransaction().begin();
+            User user = new User(username, email, password);
+            userRepository.save(em, user);
+            em.getTransaction().commit();
+            return user;
+        }
+    }
+
     @Test
     void save_shouldPersistAnnonce() {
-        Annonce annonce = new Annonce("Titre", "Description", "Adresse", "mail@test.com");
-
-        Annonce saved = repository.save(annonce);
+        Annonce saved = saveAnnonce("Titre", "Description", "Adresse", "mail@test.com");
 
         assertThat(saved.getId()).isNotNull();
         assertThat(saved.getStatus()).isEqualTo(AnnonceStatus.DRAFT);
@@ -65,133 +83,163 @@ class AnnonceRepositoryTest {
 
     @Test
     void findById_shouldReturnAnnonce() {
-        Annonce annonce = repository.save(new Annonce("Titre", "Description", "Adresse", "mail@test.com"));
+        Annonce annonce = saveAnnonce("Titre", "Description", "Adresse", "mail@test.com");
 
-        Optional<Annonce> found = repository.findById(annonce.getId());
-
-        assertThat(found).isPresent();
-        assertThat(found.get().getTitle()).isEqualTo("Titre");
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            Optional<Annonce> found = repository.findById(em, annonce.getId());
+            assertThat(found).isPresent();
+            assertThat(found.get().getTitle()).isEqualTo("Titre");
+        }
     }
 
     @Test
     void update_shouldModifyAnnonce() {
-        Annonce annonce = repository.save(new Annonce("Titre", "Description", "Adresse", "mail@test.com"));
+        Annonce annonce = saveAnnonce("Titre", "Description", "Adresse", "mail@test.com");
         annonce.setTitle("Nouveau Titre");
 
-        Annonce updated = repository.update(annonce);
-
-        assertThat(updated.getTitle()).isEqualTo("Nouveau Titre");
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            em.getTransaction().begin();
+            Annonce updated = repository.update(em, annonce);
+            em.getTransaction().commit();
+            assertThat(updated.getTitle()).isEqualTo("Nouveau Titre");
+        }
     }
 
     @Test
     void deleteById_shouldRemoveAnnonce() {
-        Annonce annonce = repository.save(new Annonce("Titre", "Description", "Adresse", "mail@test.com"));
+        Annonce annonce = saveAnnonce("Titre", "Description", "Adresse", "mail@test.com");
 
-        boolean deleted = repository.deleteById(annonce.getId());
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            em.getTransaction().begin();
+            boolean deleted = repository.deleteById(em, annonce.getId());
+            em.getTransaction().commit();
+            assertThat(deleted).isTrue();
+        }
 
-        assertThat(deleted).isTrue();
-        assertThat(repository.findById(annonce.getId())).isEmpty();
+        try (EntityManager em2 = JPAUtil.getEntityManager()) {
+            assertThat(repository.findById(em2, annonce.getId())).isEmpty();
+        }
     }
 
     @Test
     void findAll_shouldReturnAllAnnonces() {
-        repository.save(new Annonce("Titre 1", "Desc 1", "Addr 1", "mail1@test.com"));
-        repository.save(new Annonce("Titre 2", "Desc 2", "Addr 2", "mail2@test.com"));
+        saveAnnonce("Titre 1", "Desc 1", "Addr 1", "mail1@test.com");
+        saveAnnonce("Titre 2", "Desc 2", "Addr 2", "mail2@test.com");
 
-        List<Annonce> all = repository.findAll();
-
-        assertThat(all).hasSize(2);
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            List<Annonce> all = repository.findAllWithRelations(em);
+            assertThat(all).hasSize(2);
+        }
     }
 
     @Test
     void findAll_withPagination_shouldReturnPage() {
         for (int i = 0; i < 15; i++) {
-            repository.save(new Annonce("Titre " + i, "Desc " + i, "Addr " + i, "mail" + i + "@test.com"));
+            saveAnnonce("Titre " + i, "Desc " + i, "Addr " + i, "mail" + i + "@test.com");
         }
 
-        List<Annonce> page0 = repository.findAll(0, 5);
-        List<Annonce> page1 = repository.findAll(1, 5);
-
-        assertThat(page0).hasSize(5);
-        assertThat(page1).hasSize(5);
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            List<Annonce> page0 = repository.findAllWithRelations(em, 0, 5);
+            List<Annonce> page1 = repository.findAllWithRelations(em, 1, 5);
+            assertThat(page0).hasSize(5);
+            assertThat(page1).hasSize(5);
+        }
     }
 
     @Test
     void searchByKeyword_shouldFindByTitle() {
-        repository.save(new Annonce("Voiture à vendre", "Belle voiture", "Paris", "mail@test.com"));
-        repository.save(new Annonce("Appartement", "Bel appartement", "Lyon", "mail2@test.com"));
+        saveAnnonce("Voiture à vendre", "Belle voiture", "Paris", "mail@test.com");
+        saveAnnonce("Appartement", "Bel appartement", "Lyon", "mail2@test.com");
 
-        List<Annonce> results = repository.searchByKeyword("voiture", 0, 100);
-
-        assertThat(results).hasSize(1);
-        assertThat(results.get(0).getTitle()).contains("Voiture");
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            List<Annonce> results = repository.searchByKeyword(em, "voiture", 0, 100);
+            assertThat(results).hasSize(1);
+            assertThat(results.getFirst().getTitle()).contains("Voiture");
+        }
     }
 
     @Test
     void searchByKeyword_shouldFindByDescription() {
-        repository.save(new Annonce("A vendre", "Belle voiture occasion", "Paris", "mail@test.com"));
-        repository.save(new Annonce("Appartement", "Bel appartement", "Lyon", "mail2@test.com"));
+        saveAnnonce("A vendre", "Belle voiture occasion", "Paris", "mail@test.com");
+        saveAnnonce("Appartement", "Bel appartement", "Lyon", "mail2@test.com");
 
-        List<Annonce> results = repository.searchByKeyword("voiture", 0, 100);
-
-        assertThat(results).hasSize(1);
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            List<Annonce> results = repository.searchByKeyword(em, "voiture", 0, 100);
+            assertThat(results).hasSize(1);
+        }
     }
 
     @Test
     void findByStatus_shouldFilterByStatus() {
-        repository.save(new Annonce("Draft", "Desc", "Addr", "mail@test.com"));
-        Annonce published = repository.save(new Annonce("Published", "Desc", "Addr", "mail2@test.com"));
-        published.setStatus(AnnonceStatus.PUBLISHED);
-        repository.update(published);
+        saveAnnonce("Draft", "Desc", "Addr", "mail@test.com");
+        Annonce published = saveAnnonce("Published", "Desc", "Addr", "mail2@test.com");
 
-        List<Annonce> drafts = repository.findByStatus(AnnonceStatus.DRAFT, 0, 100);
-        List<Annonce> publishedList = repository.findByStatus(AnnonceStatus.PUBLISHED, 0, 100);
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            em.getTransaction().begin();
+            repository.updateStatus(em, published.getId(), AnnonceStatus.PUBLISHED);
+            em.getTransaction().commit();
+        }
 
-        assertThat(drafts).hasSize(1);
-        assertThat(publishedList).hasSize(1);
+        try (EntityManager em2 = JPAUtil.getEntityManager()) {
+            List<Annonce> drafts = repository.findByStatus(em2, AnnonceStatus.DRAFT, 0, 100);
+            List<Annonce> publishedList = repository.findByStatus(em2, AnnonceStatus.PUBLISHED, 0, 100);
+            assertThat(drafts).hasSize(1);
+            assertThat(publishedList).hasSize(1);
+        }
     }
 
     @Test
     void findByAuthor_shouldFilterByAuthor() {
-        User author1 = userRepository.save(new User("user1", "user1@test.com", "password"));
-        User author2 = userRepository.save(new User("user2", "user2@test.com", "password"));
+        User author1 = saveUser("user1", "user1@test.com", "password");
+        User author2 = saveUser("user2", "user2@test.com", "password");
 
-        Annonce a1 = new Annonce("Annonce 1", "Desc", "Addr", "mail@test.com");
-        a1.setAuthor(author1);
-        repository.save(a1);
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            em.getTransaction().begin();
+            Annonce a1 = new Annonce("Annonce 1", "Desc", "Addr", "mail@test.com");
+            a1.setAuthor(em.find(User.class, author1.getId()));
+            repository.save(em, a1);
 
-        Annonce a2 = new Annonce("Annonce 2", "Desc", "Addr", "mail2@test.com");
-        a2.setAuthor(author2);
-        repository.save(a2);
+            Annonce a2 = new Annonce("Annonce 2", "Desc", "Addr", "mail2@test.com");
+            a2.setAuthor(em.find(User.class, author2.getId()));
+            repository.save(em, a2);
+            em.getTransaction().commit();
+        }
 
-        List<Annonce> byAuthor1 = repository.findByAuthor(author1.getId(), 0, 100);
-
-        assertThat(byAuthor1).hasSize(1);
-        assertThat(byAuthor1.get(0).getTitle()).isEqualTo("Annonce 1");
+        try (EntityManager em2 = JPAUtil.getEntityManager()) {
+            List<Annonce> byAuthor1 = repository.findByAuthor(em2, author1.getId(), 0, 100);
+            assertThat(byAuthor1).hasSize(1);
+            assertThat(byAuthor1.getFirst().getTitle()).isEqualTo("Annonce 1");
+        }
     }
 
     @Test
     void countByStatus_shouldReturnCorrectCount() {
-        repository.save(new Annonce("Draft 1", "Desc", "Addr", "mail@test.com"));
-        repository.save(new Annonce("Draft 2", "Desc", "Addr", "mail2@test.com"));
-        Annonce published = repository.save(new Annonce("Published", "Desc", "Addr", "mail3@test.com"));
-        published.setStatus(AnnonceStatus.PUBLISHED);
-        repository.update(published);
+        saveAnnonce("Draft 1", "Desc", "Addr", "mail@test.com");
+        saveAnnonce("Draft 2", "Desc", "Addr", "mail2@test.com");
+        Annonce published = saveAnnonce("Published", "Desc", "Addr", "mail3@test.com");
 
-        long draftCount = repository.countByStatus(AnnonceStatus.DRAFT);
-        long publishedCount = repository.countByStatus(AnnonceStatus.PUBLISHED);
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            em.getTransaction().begin();
+            repository.updateStatus(em, published.getId(), AnnonceStatus.PUBLISHED);
+            em.getTransaction().commit();
+        }
 
-        assertThat(draftCount).isEqualTo(2);
-        assertThat(publishedCount).isEqualTo(1);
+        try (EntityManager em2 = JPAUtil.getEntityManager()) {
+            long draftCount = repository.countByStatus(em2, AnnonceStatus.DRAFT);
+            long publishedCount = repository.countByStatus(em2, AnnonceStatus.PUBLISHED);
+            assertThat(draftCount).isEqualTo(2);
+            assertThat(publishedCount).isEqualTo(1);
+        }
     }
 
     @Test
     void count_shouldReturnTotalCount() {
-        repository.save(new Annonce("Titre 1", "Desc", "Addr", "mail@test.com"));
-        repository.save(new Annonce("Titre 2", "Desc", "Addr", "mail2@test.com"));
+        saveAnnonce("Titre 1", "Desc", "Addr", "mail@test.com");
+        saveAnnonce("Titre 2", "Desc", "Addr", "mail2@test.com");
 
-        long count = repository.count();
-
-        assertThat(count).isEqualTo(2);
+        try (EntityManager em = JPAUtil.getEntityManager()) {
+            long count = repository.count(em);
+            assertThat(count).isEqualTo(2);
+        }
     }
 }
